get single order handler
