# backend/internal/api/get_orders/handler.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 
 	"github.com/labstack/echo/v4"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 
 	"github.com/moevm/nosql1h25-writer/backend/internal/api"
 	"github.com/moevm/nosql1h25-writer/backend/internal/api/common/decorator"
@@ -32,13 +33,13 @@ type Response struct {
 }
 
 type Order struct {
-	ID             string  `json:"id"`
-	Title          string  `json:"title"`
-	Description    string  `json:"description"`
-	CompletionTime int     `json:"completionTime"`
-	Cost           int     `json:"cost,omitempty"`
-	ClientName     string  `json:"clientName"`
-	Rating         float64 `json:"rating"`
+	ID             primitive.ObjectID `json:"id"`
+	Title          string             `json:"title"`
+	Description    string             `json:"description"`
+	CompletionTime int64              `json:"completionTime"`
+	Cost           int                `json:"cost,omitempty"`
+	ClientName     string             `json:"clientName"`
+	Rating         float64            `json:"rating"`
 }
 
 // Handle - Get Orders
@@ -57,10 +58,12 @@ type Order struct {
 //	@Router			/orders [get]
 func (h *handler) Handle(c echo.Context, in Request) error {
 	offset, limit := applyDefaults(in)
+
 	findOut, err := h.orderService.Find(c.Request().Context(), offset, limit, in.MinCost, in.MaxCost, in.SortBy)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
 	}
+
 	orderList := make([]Order, 0, len(findOut.Orders))
 	for _, order := range findOut.Orders {
 		orderList = append(orderList, Order{
@@ -73,6 +76,7 @@ func (h *handler) Handle(c echo.Context, in Request) error {
 			Rating:         order.Rating,
 		})
 	}
+
 	return c.JSON(http.StatusOK, Response{Orders: orderList, Total: findOut.Total})
 }
 
