# backend/internal/service/orders/dto.go
@@ -16,10 +16,10 @@ type FindOut struct {
 }
 
 type OrderWithClientData struct {
-	ID             string
+	ID             primitive.ObjectID
 	Title          string
 	Description    string
-	CompletionTime int
+	CompletionTime int64
 	Cost           int
 	ClientName     string
 	Rating         float64
